Refatoração dos serviços "todos()" para retornar .toList() ao invés de 		.collect(Collectors.toList());