@@ -17,7 +17,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -65,7 +64,7 @@ public class DocumentoServico {
 		return repositorio.findAll()
 				.stream()
 				.map(conversor::convertToDto)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	public DocumentoDTO cadastro(Long idCliente, @Valid DocumentoDTO documentoDTO) {
