@@ -17,7 +17,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -66,7 +65,7 @@ public class EnderecoServico {
 		return repositorio.findAll()
 				.stream()
 				.map(conversor::convertToDto)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	public EnderecoDTO cadastro(Long idCliente, @Valid EnderecoDTO dto) {
